examples/test/testpolicy13233.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13233
  namespace: namespace128
spec:
  podSelector:
    matchLabels:
      key10: value9
      key20: value14
      key30: value45
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key20: value21
          key43: value23
      podSelector:
        matchLabels:
          key34: value41
          key45: value40
          key33: value21
